# openstack_sample_project

./: CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py
doc/source/: conf.py  index.rst  installation.rst  usage.rst
etc/: api-paste.ini  mail_template.xml  report-agent.service  report-api.service  report.conf.example  report.spec
report/: __init__.py  context.py  exception.py  i18n.py  jobutil.py  json2excel.py  policy.py  rpc.py  service.py  utils.py  wsgi.py
report/agent/: base.py  default_tasks.py  manager.py  rpcapi.py  task_content.py  tasks.py  tasks.py.bak
report/agent/task/: alarm_task.py  meter_task.py  monitor_task.py
report/api/: app.py  auth.py  hooks.py  wsgi.py
report/api/controller/: resource.py  root.py
report/api/controller/v1/: root.py  rptfiles.py  rpttasks.py
report/client/: cache.py  httpclient.py  influx.py  keystone_client.py  mistral_client.py  nova_client.py  zeus_client.py
report/cmd/: __init__.py  agent.py  api.py  data_analysis.py  launch.py  rpt.py  storage.py
report/drawutils/: excelreport.py  pdfreport.py  report_pic.py
report/locale/: lang.po
report/openstack/common/: eventlet_backdoor.py  loopingcall.py  policy.py  service.py  threadgroup.py
report/storage/: __init__.py  base.py  impl_hbase.py  impl_sqlalchemy.py  models.py
report/storage/hbase/: base.py  inmemory.py  migration.py  utils.py
report/storage/sqlalchemy/: models.py  utils.py
report/storage/sqlalchemy/migrate_repo/: README  migrate.cfg
report/storage/sqlalchemy/migrate_repo/versions/: 001_add_reporttasks_table.py  002_add_reportfiles_table.py
